src-tauri/check_errors_4.txt
cargo :     Checking corex 
v0.1.0 (E:\ai-desktop\local
-ai\src-tauri)
At line:1 char:1
+ cargo check 2>&1 | Out-Fi
le -FilePath check_errors_4
.txt -Encoding as ...
+ ~~~~~~~~~~~~~~~~
    + CategoryInfo         
     : NotSpecified: (     
   Checking co...l-ai\sr   
 c-tauri):String) [], R    
emoteException
    + FullyQualifiedErrorI 
   d : NativeCommandError
 
error[E0061]: this method t
akes 4 arguments but 1 argu
ment was supplied
   --> src\gguf.rs:433:27
    |
433 |         let piece = m
odel.token_to_piece(*token_
id);
    |                      
     ^^^^^^^^^^^^^^--------
--- three arguments of type
 `&mut encoding_rs::Decoder
`, `bool`, and `std::option
::Option<NonZero<u16>>` are
 missing
    |
note: method defined here
   --> C:\Users\pc\.cargo\r
egistry\src\index.crates.io
-1949cf8c6b5b557f\llama-cpp
-2-0.1.133\src\model.rs:434
:12
    |
434 |     pub fn token_to_p
iece(
    |            ^^^^^^^^^^
^^^^
help: provide the arguments
    |
433 |         let piece = m
odel.token_to_piece(*token_
id, /* &mut encoding_rs::De
coder */, /* bool */, /* st
d::option::Option<NonZero<u
16>> */);
    |                      
                           
  +++++++++++++++++++++++++
+++++++++++++++++++++++++++
+++++++++++++++++++++++++++
+++++++

error[E0308]: mismatched ty
pes
   --> src\gguf.rs:434:49
    |
434 |         let token_str
 = String::from_utf8_lossy(
&piece).to_string();
    |                      
   ----------------------- 
^^^^^^ expected `&[u8]`, fo
und `&Result<String, TokenT
oStringError>`
    |                      
   |
    |                      
   arguments to this functi
on are incorrect
    |
    = note: expected refere
nce `&[u8]`
               found refere
nce `&Result<std::string::S
tring, TokenToStringError>`
note: associated function d
efined here
   --> C:\Users\pc\.rustup\
toolchains\stable-x86_64-pc
-windows-msvc\lib/rustlib/s
rc/rust\library\alloc\src\s
tring.rs:622:12
    |
622 |     pub fn from_utf8_
lossy(v: &[u8]) -> Cow<'_, 
str> {
    |            ^^^^^^^^^^
^^^^^

Some errors have detailed e
xplanations: E0061, E0308.
For more information about 
an error, try `rustc --expl
ain E0061`.
error: could not compile `c
orex` (lib) due to 2 previo
us errors
